demo_app/01_plain/deploy/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: app
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: doody/plain_app:0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
