demo_app/01_plain/deploy/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
